--- a/16/index.css
+++ b/16/index.css
@@ -5,13 +5,46 @@ body {
     height: 100vh;
 
     margin: 0;
+
+    font: 14px Helvetica;
 }
 
 #play_button {
-    width: 200px;
-    height: 100px;
+    width: 150px;
+    height: 75px;
 
     margin: auto;
+    margin-top: unset;
 
     font: 14px Helvetica;
+}
+
+.grid {
+    display: grid;
+    width: 100%;
+}
+
+.info {
+    display: grid;
+    width: 100%;
+}
+
+.scores {
+    display: flex;
+
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.results {
+    margin: auto;
+}
+
+.scores,
+.results {
+    font-size: 18px;
+}
+
+.hidden {
+    visibility: hidden;
 }
